@@ -233,6 +233,7 @@ Version 1.11.0-svn:
    * Adds new WML attribute for configurable village support (upkeep)
    * Change [object]duration=level to [object]duration=scenario
    * The race attribute in SUFs can now take a comma-separated list
+   * New image path function: ~ROTATE()
  * Miscellaneous and bug fixes:
    * Fix wrong preferences path suffix (1.1 instead of 1.10) on Linux and other
      platforms using XDG layout (no compiled-in preferences path override,
